--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/mousetrap": "^1.6.3",
     "@types/papaparse": "^5.0.3",
     "core-js": "^3.3.2",
+    "mousetrap": "^1.6.3",
     "papaparse": "^5.1.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
